- added ability to switch the default model in the swagger server - added some helper functions for the tuning to the swagger server
