# flask_server/swagger_server/controllers/tune_controller.py
@@ -18,6 +18,38 @@ from flask_server.utils.Storage import Storage
 from flask_server.utils.TuningQueue import TuningQueue
 
 
+def apply_specific_tuning_as_default_model(modelId):
+    """sets a given tuned model as default model
+
+    sets a given tuned model as default model 
+
+    :param modelId: model id of the tuned model
+    :type modelId: str
+
+    :rtype: None
+    """
+
+    # get model:
+    tuned_model = Storage.get_tune_model(modelId)
+
+    # replace current model
+    Storage.model_id = tuned_model.id
+    Storage.parameter_set = tuned_model.parameter_set
+    Storage.cae = tuned_model.ann
+    Storage.cae_thread = tuned_model.cae_thread
+    Storage.train_step = tuned_model.Storage.train_step
+
+    # delete precomputed data:
+    Storage.output_data = {}
+    Storage.latent_representation_data = {}
+    Storage.score_data = {}
+    Storage.output_batch_indices = {}
+    Storage.clustering_data = {}
+    Storage.clustering_status = {}
+
+    return 'Default model set', 200
+
+
 def control_tuning(trainStatus):
     """
     starts, pauses and stops the tuning
@@ -126,18 +158,28 @@ def get_train_performance_of_current_tuning():
     return train_performance_object, 200
 
 
-def build_grid_search_ann(inputParameterLists):
-    """
-    passes all learning and ANN parameters to the server
-    Includes learning parameters and ANN topology as lists
+def build_grid_search_ann(inputParameterLists, deletePreviousModels=False):
+    """passes all learning and ANN parameters to the server
+
+    Includes learning parameters and ANN topology as lists 
 
     :param inputParameterLists: object with all tunable parameter lists
     :type inputParameterLists: dict | bytes
+    :param deletePreviousModels: if true delete all previous tuned models
+    :type deletePreviousModels: bool
 
     :rtype: None
     """
     if connexion.request.is_json:
         inputParameterLists = ParameterList.from_dict(connexion.request.get_json())
+
+        if deletePreviousModels:
+            # delete all previous models
+            Storage.tuning_ANNs = []
+            Storage.tuning_ANN_model_ids = []
+            Storage.tuning_thread = threading.Thread()
+            Storage.tuning_queue = object()
+            Storage.tuning_status = ""
 
         all_parameter_combinations = generate_parameter_combination_list(inputParameterLists)
 
@@ -231,6 +273,17 @@ def get_train_performance_of_specific_tuning(modelId):  # noqa: E501
     #     train_performance_object.train_status = "finished"
     #
     # return train_performance_object, 200
+
+
+def get_tune_model_ids():  # noqa: E501
+    """returns a list of all tuned model ids
+
+    returns a list of all tuned model ids # noqa: E501
+
+
+    :rtype: List[str]
+    """
+    return Storage.tuning_ANN_model_ids
 
 
 def get_tune_parameter(modelId):  # noqa: E501
